# protobuf-ksql

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
config/: secret.py
ksql/: __main__.py  client.py  dash_client.py
proto/: generate_protos.sh  item.proto  turnstile.proto
scripts/: generate_protos.sh  locustfile.py
src/: __main__.py  aio_confluent.py  avro_schema.py  item_pb2.py  server.py  settings.py
